Fix parsing error, when whitespace strings were treated as tracks

--- a/src/css/TrackView.css
+++ b/src/css/TrackView.css
@@ -41,4 +41,5 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 30%;
 }
